--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Run Buddy</title>
 </head>
 <body>
-    <h1> RUN BUDDY</h1>
-    What we do 
+    <h3> RUN BUDDY</h3>
+    What we do What You Do Your Trainers Reach Out
 </body>
 </html>
