--- a/index.html
+++ b/index.html
@@ -5,7 +5,40 @@
     <title>Run Buddy</title>
 </head>
 <body>
-    <h3> RUN BUDDY</h3>
+    <header>
+        <h3> RUN BUDDY</h3>
+    </header>
+
+
+    <!--hero/jumbotron-->
+    <section></section>
+
+    <!--"what we do" section-->
+    <section>
+        <h2>What We Do</h2>
+    </section>
+
+    <!--"what you do" section-->
+    <section>
+        <h2>What You Do</h2>
+    </section>
+
+    <!--"meet the trainers" section-->
+    <section>
+        <h2>Meet The Trainers</h2>
+    </section>
+
+    <!--"reach out" section-->
+    <section>
+        <h2>Reach Out</h2>
+    </section>
+
+    <!--footer-->
+    <footer>
+        <h2>❤️ Made wit love by Run Buddy.</h2>
+    </footer>
+
+
     What we do What You Do Your Trainers Reach Out
 </body>
 </html>
