--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>Run Buddy</title>
+    <link rel="stylesheet" href=assets/css/style.css />
 </head>
 <body>
     <header>
-        <h3> RUN BUDDY</h3>
+        <h1>
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        <nav>
+            <!--Unordered list element-->
+            <ul>
+                <!--List item element-->
+                <li>
+                    <!--Anchor element-->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
 
@@ -35,7 +57,7 @@
 
     <!--footer-->
     <footer>
-        <h2>❤️ Made wit love by Run Buddy.</h2>
+        <h2>❤️ Made with love by Run Buddy.</h2>
     </footer>
 
 
