--- a/index.html
+++ b/index.html
@@ -108,8 +108,47 @@
     </section>
 
     <!--"meet the trainers" section-->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes,
+             ready to pump iron" />
+             <div class="trainer-bio text-left">
+                 <h3>Aaron Stephens</h3>
+                 <h4>Speed / Strength</h4>
+                 <p>
+                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                     Tempora veniam vel non laborum vitae eveniet quasi, numquam 
+                     soluta esse dolorum laudantium dignissimos odit placeat molestias 
+                     voluptatum exercitationem possimus eum ad!
+                 </p>
+             </div>
+        </article>
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error maiores 
+                    fuga eaque corrupti, dolores molestiae obcaecati minima sed natus aliquid 
+                    animi, consequuntur est cupiditate, fugiat nulla at doloremque rerum. Nulla!
+               </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and 
+            lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error maiores 
+                    fuga eaque corrupti, dolores molestiae obcaecati minima sed natus aliquid 
+                    animi, consequuntur est cupiditate, fugiat nulla at doloremque rerum. Nulla!
+               </p>
+            </div>
+        </article>
     </section>
 
     <!--"reach out" section-->
