style contact info

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
     </section>
 
     <!--"reach out" section-->
-    <section>
-        <h2>Reach Out</h2>
+    <section id="reach out" class="contact">
+        <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
         <iframe src= 
             "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3146.
