--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <a href="/">RUN BUDDY</a>
         </h1>
         <nav>
-            <!--Unordered list element-->
+<!--UNORDERED LIST ITEM-->
             <ul>
-                <!--List item element-->
+<!--LIST ITEM ELEMENT-->
                 <li>
-                    <!--Anchor element-->
+<!--ANCHOR ELEMENTS-->
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
@@ -32,12 +32,13 @@
     </header>
 
 
- <!--hero/jumbotron-->
+<!--HERO/JUMBOTRON-->
     <section class="hero">
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
-        <!--Add form element-->
+
+
         <form>
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your Name" name="name" id="name"/>
@@ -62,11 +63,12 @@
                 Get running!
             </button>
         </form>
+
         </div>
     </section>
-<!--end hero-->
+<!--END HERO-->
 
-    <!--"what we do" section-->
+<!--"WHAT WE DO" SECTION-->
     <section id="what-we-do" class="intro">
         <h2 class="section-title primary-border">What We Do</h2>
         <p>
@@ -78,7 +80,7 @@
         </p>
     </section>
 
-    <!--"what you do" section-->
+    <!--"WHAT YOU DO" SECTION-->
     <section id="what-you-do" class="steps">
         <h2 class="section-title secondary-border">What You Do </h2>
 
@@ -107,7 +109,7 @@
         </div>
     </section>
 
-    <!--"meet the trainers" section-->
+    <!--"MEET THE TRAINERS" SECTION-->
     <section id="your-trainers" class="trainers">
         <h2 class="section-title primary-border">
             Meet The Trainers
@@ -151,7 +153,7 @@
         </article>
     </section>
 
-    <!--"reach out" section-->
+<!--"REACH OUT" SECTION-->
     <section id="reach out" class="contact">
         <h2 class="section-title secondary-border">Reach Out</h2>
         <div class="contact-info">
@@ -185,11 +187,11 @@
         </div>
     </section>
 
-    <!--footer-->
+<!--FOOTER-->
     <footer>
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br/>
+            <a href="./privacy-policy.html">Read Our Privacy Policy</a><br/>
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
